# irods_capability_storage_tiering

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  access_time.cmake  apply_access_time.cmake  data_movement.cmake  data_replication.cmake  data_verification.cmake  data_verification_utilities.cpp  data_verification_utilities.hpp  example_tiering_invocation.r  example_unified_tiering_invocation.r  exec_as_user.hpp  irods_consortium_continuous_integration_build_hook.py  irods_consortium_continuous_integration_test_hook.py  irods_object_migrator.cpp  irods_object_migrator.hpp  irods_plugin_common.cmake  irods_query.hpp  irods_storage_tiering.cpp  irods_storage_tiering.hpp  libirods_rule_engine_plugin-apply_access_time.cpp  libirods_rule_engine_plugin-data_movement.cpp  libirods_rule_engine_plugin-data_replication.cpp  libirods_rule_engine_plugin-data_verification.cpp  libirods_rule_engine_plugin-storage_tiering.cpp  libirods_rule_engine_plugin-tiered_storage.cpp  libirods_rule_engine_plugin-unified_storage_tiering.cpp  proxy_connection.hpp  sample_configuration.json  storage_tiering.cmake  storage_tiering.cpp  storage_tiering.hpp  storage_tiering_configuration.cpp  storage_tiering_configuration.hpp  storage_tiering_utilities.cpp  storage_tiering_utilities.hpp  unified_storage_tiering.cmake
.github/workflows/: build-and-test-plugin-with-irods-packages.yml  build-and-test-plugin.yml
include/irods/private/storage_tiering/: configuration.hpp  data_verification_utilities.hpp  exec_as_user.hpp  proxy_connection.hpp  storage_tiering.hpp  utilities.hpp
packaging/: postinst  postinst_access  postinst_movement  postinst_replication  postinst_tiering  postinst_unified_storage_tiering  postinst_verification  run_tiered_storage_plugin_test.py  run_unified_storage_tiering_plugin_test.py  test_plugin_storage_tiering.py  test_plugin_tiered_storage.py  test_plugin_tiered_storage_server_config.json  test_plugin_unified_storage_tiering.py
packaging/storage_tiering/: postinst
src/: configuration.cpp  data_verification_utilities.cpp  main.cpp  storage_tiering.cpp  utilities.cpp
test/: CMakeLists.txt
test/stream_test/: CMakeLists.txt  irods_test_create_object.cpp  irods_test_multi_open_for_write_object.cpp  irods_test_read_object.cpp
